--- a/o/t/index.html
+++ b/o/t/index.html
@@ -6,7 +6,7 @@ html,body{margin:0;background:#000;height:100%;overflow:hidden}
 </style>
 </head>
 <body>
-<audio id="s" src="../sound.mp3"></audio>
+<audio id="s" src="../sound.mp3" loop></audio>
 <script>
 const u=new URL(location.href),t=u.searchParams.get('t');
 const a=document.getElementById('s');
