--- a/o/t/index.html
+++ b/o/t/index.html
@@ -6,18 +6,16 @@ html,body{margin:0;background:#000;height:100%;overflow:hidden;cursor:pointer}
 </style>
 </head>
 <body>
-<audio id="silent" src="../sound.mp3" loop volume="0"></audio>
-<audio id="s" src="../sound.mp3" loop></audio>
+<audio id="a" src="../sound.mp3" loop></audio>
 <script>
 const u=new URL(location.href),t=u.searchParams.get('t');
-const a=document.getElementById('s');
-const silent=document.getElementById('silent');
+const a=document.getElementById('a');
 let ctx,src,gain,eq;
 function initAudio(){
   ctx=new (window.AudioContext||window.webkitAudioContext)();
   src=ctx.createMediaElementSource(a);
   gain=ctx.createGain();
-  gain.gain.value=4;
+  gain.gain.value=0;
   eq=[
     {f:60,g:3},{f:170,g:2},{f:350,g:1},{f:1000,g:1},{f:3500,g:2},{f:10000,g:3}
   ].map(b=>{const f=ctx.createBiquadFilter();f.type='peaking';f.frequency.value=b.f;f.gain.value=b.g;return f});
@@ -42,13 +40,9 @@ function start(){
   document.body.removeEventListener('click', start);
   initAudio();
   ctx.resume().then(()=>{
-    silent.play();
+    a.play();
     const delay=getDelay(t);
-    setTimeout(()=>{
-      silent.pause();
-      silent.currentTime=0;
-      a.play();
-    }, delay);
+    setTimeout(()=>{gain.gain.setValueAtTime(4, ctx.currentTime);}, delay);
   });
 }
 document.body.addEventListener('click', start);
