--- a/o/t/index.html
+++ b/o/t/index.html
@@ -1,51 +1,69 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>snd</title>
 <style>
-html,body{margin:0;background:#000;height:100%;overflow:hidden;cursor:pointer}
+html,body{
+  margin:0;
+  padding:0;
+  background:black;
+  width:100%;
+  height:100%;
+  overflow:hidden;
+  touch-action:none;
+  -webkit-tap-highlight-color: transparent;
+}
+button,input,textarea{outline:none;border:none;}
 </style>
 </head>
 <body>
-<audio id="a" src="../sound.mp3" loop></audio>
 <script>
-const u=new URL(location.href),t=u.searchParams.get('t');
-const a=document.getElementById('a');
-let ctx,src,gain,eq;
-function initAudio(){
-  ctx=new (window.AudioContext||window.webkitAudioContext)();
-  src=ctx.createMediaElementSource(a);
-  gain=ctx.createGain();
-  gain.gain.value=0;
-  eq=[
-    {f:60,g:3},{f:170,g:2},{f:350,g:1},{f:1000,g:1},{f:3500,g:2},{f:10000,g:3}
-  ].map(b=>{const f=ctx.createBiquadFilter();f.type='peaking';f.frequency.value=b.f;f.gain.value=b.g;return f});
-  src.connect(eq[0]);
-  for(let i=0;i<eq.length-1;i++) eq[i].connect(eq[i+1]);
-  eq.at(-1).connect(gain).connect(ctx.destination);
+let url = new URL(window.location.href)
+let t = url.searchParams.get("t")
+let a = new Audio("sound.mp3")
+a.loop = true
+a.volume = 0
+
+function playWithEQ() {
+  const ctx = new (window.AudioContext || window.webkitAudioContext)()
+  const src = ctx.createMediaElementSource(a)
+  const eq = ctx.createBiquadFilter()
+  eq.type = "peaking"
+  eq.frequency.value = 2000
+  eq.gain.value = 6
+  src.connect(eq)
+  eq.connect(ctx.destination)
+  ctx.resume()
+  a.play()
 }
-function getDelay(timeStr){
-  if(/\d+:\d+(:\d+)?/.test(timeStr)){
-    const now=new Date();
-    let parts=timeStr.split(':').map(Number);
-    const target=new Date();
-    target.setHours(parts[0], parts[1]||0, parts[2]||0, 0);
-    if(target<=now) target.setDate(target.getDate()+1);
-    return target-now;
-  } else if(/\d+s?/.test(timeStr)){
-    return parseInt(timeStr.replace(/s$/,''))*1000;
+
+function toMs(v){
+  if(!v)return 0
+  if(v.endsWith("s"))return parseFloat(v)*1000
+  if(v.includes(":")){
+    let now=new Date()
+    let [h,m,s]=v.split(":").map(Number)
+    if(s===undefined)s=0
+    let target=new Date()
+    target.setHours(h,m,s,0)
+    if(target<now)target.setDate(target.getDate()+1)
+    return target-now
   }
-  return 0;
+  return 0
 }
-function start(){
-  document.body.removeEventListener('click', start);
-  initAudio();
-  ctx.resume().then(()=>{
-    a.play();
-    const delay=getDelay(t);
-    setTimeout(()=>{gain.gain.setValueAtTime(4, ctx.currentTime);}, delay);
-  });
-}
-document.body.addEventListener('click', start);
+
+document.body.addEventListener("click",()=>{
+  playWithEQ()
+  let delay = toMs(t)
+  setTimeout(()=>{
+    a.pause()
+    a.currentTime = 0
+    a.volume = 1
+    a.play()
+  },delay)
+},{once:true})
 </script>
 </body>
 </html>
