--- a/404.html
+++ b/404.html
@@ -12,100 +12,92 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: #000;
+      background: radial-gradient(circle at center, #020202 0%, #000 100%);
       color: #0ff;
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
       overflow: hidden;
+      animation: fadeIn 1.5s ease-out;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.98); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
     h1 {
-      font-size: 6rem;
-      text-shadow: 0 0 20px #0ff, 0 0 40px #0ff;
+      font-size: 8rem;
       margin: 0;
+      text-shadow: 0 0 20px #0ff, 0 0 60px #0ff, 0 0 100px #0ff;
+      animation: neonPulse 2.5s infinite alternate;
     }
+
+    @keyframes neonPulse {
+      from {
+        text-shadow: 0 0 10px #0ff, 0 0 30px #0ff, 0 0 60px #0ff;
+        opacity: 0.9;
+      }
+      to {
+        text-shadow: 0 0 20px #0ff, 0 0 80px #0ff, 0 0 150px #0ff;
+        opacity: 1;
+      }
+    }
+
     p {
-      font-size: 1.5rem;
+      font-size: 1.6rem;
       text-shadow: 0 0 10px #0ff;
+      margin: 15px 0;
+      animation: textGlow 3s infinite alternate;
     }
+
+    @keyframes textGlow {
+      from { opacity: 0.8; text-shadow: 0 0 5px #0ff; }
+      to { opacity: 1; text-shadow: 0 0 20px #0ff; }
+    }
+
     a {
+      display: inline-block;
       color: #0ff;
       border: 2px solid #0ff;
-      padding: 10px 20px;
-      margin-top: 20px;
-      border-radius: 10px;
+      padding: 10px 25px;
+      border-radius: 12px;
       text-decoration: none;
+      font-size: 1.2rem;
       text-shadow: 0 0 10px #0ff;
-      transition: 0.2s;
+      box-shadow: 0 0 15px #0ff inset, 0 0 20px #0ff;
+      animation: btnGlow 2.5s infinite alternate;
+      transition: 0.25s;
     }
+
+    @keyframes btnGlow {
+      from { box-shadow: 0 0 10px #0ff; }
+      to { box-shadow: 0 0 30px #0ff, 0 0 60px #0ff inset; }
+    }
+
     a:hover {
       background: #0ff;
       color: #000;
-      box-shadow: 0 0 20px #0ff;
-    }
-    .lang-switch {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-    }
-    select {
-      background: #000;
-      color: #0ff;
-      border: 1px solid #0ff;
-      border-radius: 8px;
-      padding: 5px 10px;
-      font-size: 1rem;
+      box-shadow: 0 0 25px #0ff, 0 0 60px #0ff;
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
-  <div class="lang-switch">
-    <select id="langSelect">
-      <option value="en">EN</option>
-      <option value="uk">UA</option>
-      <option value="ru">RU</option>
-    </select>
-  </div>
-
-  <h1 id="title">404</h1>
-  <p id="text">Page not found</p>
-  <a href="/" id="homeLink">Go home</a>
+  <h1>404</h1>
+  <p id="message">Page not found</p>
+  <a href="/" id="home">Go home</a>
 
   <script>
     const translations = {
-      en: {
-        text: "Page not found",
-        homeLink: "Go home"
-      },
-      uk: {
-        text: "Сторінку не знайдено",
-        homeLink: "На головну"
-      },
-      ru: {
-        text: "Страница не найдена",
-        homeLink: "На главную"
-      }
+      en: { message: "Page not found", home: "Go home" },
+      uk: { message: "Сторінку не знайдено", home: "На головну" },
+      ru: { message: "Страница не найдена", home: "На главную" }
     };
 
-    const langSelect = document.getElementById('langSelect');
-    const text = document.getElementById('text');
-    const homeLink = document.getElementById('homeLink');
-
-    function setLang(lang) {
-      const t = translations[lang] || translations.en;
-      text.textContent = t.text;
-      homeLink.textContent = t.homeLink;
-      langSelect.value = lang;
-    }
-
-    // Автоматичне визначення мови браузера
-    const browserLang = navigator.language.slice(0, 2);
-    if (translations[browserLang]) {
-      setLang(browserLang);
-    } else {
-      setLang('en');
-    }
-
-    langSelect.addEventListener('change', e => setLang(e.target.value));
+    const lang = navigator.language.slice(0, 2);
+    const t = translations[lang] || translations.en;
+    document.getElementById("message").textContent = t.message;
+    document.getElementById("home").textContent = t.home;
   </script>
 </body>
 </html>
