--- a/404.html
+++ b/404.html
@@ -17,61 +17,79 @@
       font-family: 'Segoe UI', sans-serif;
       text-align: center;
       overflow: hidden;
-      animation: fadeIn 1.5s ease-out;
+      animation: fadeInBg 2s ease-in-out;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.98); }
-      to { opacity: 1; transform: scale(1); }
+    @keyframes fadeInBg {
+      from { background-color: #000; opacity: 0; }
+      to { opacity: 1; }
     }
 
     h1 {
       font-size: 8rem;
       margin: 0;
-      text-shadow: 0 0 20px #0ff, 0 0 60px #0ff, 0 0 100px #0ff;
-      animation: neonPulse 2.5s infinite alternate;
+      text-shadow: 0 0 30px #0ff, 0 0 80px #0ff;
+      opacity: 0;
+      transform: scale(0.5) translateY(-100px);
+      animation: appear404 2s ease-out forwards, neonPulse 2.5s infinite alternate 2s;
+    }
+
+    @keyframes appear404 {
+      0% {
+        opacity: 0;
+        transform: scale(0.5) translateY(-100px);
+        filter: blur(10px);
+      }
+      100% {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+        filter: blur(0);
+      }
     }
 
     @keyframes neonPulse {
-      from {
-        text-shadow: 0 0 10px #0ff, 0 0 30px #0ff, 0 0 60px #0ff;
-        opacity: 0.9;
-      }
-      to {
-        text-shadow: 0 0 20px #0ff, 0 0 80px #0ff, 0 0 150px #0ff;
-        opacity: 1;
-      }
+      from { text-shadow: 0 0 20px #0ff, 0 0 60px #0ff; }
+      to { text-shadow: 0 0 40px #0ff, 0 0 120px #0ff; }
     }
 
     p {
       font-size: 1.6rem;
       text-shadow: 0 0 10px #0ff;
-      margin: 15px 0;
-      animation: textGlow 3s infinite alternate;
+      margin: 20px 0;
+      opacity: 0;
+      transform: translateY(30px);
+      animation: slideUp 1.5s ease-out forwards 1.8s;
     }
 
-    @keyframes textGlow {
-      from { opacity: 0.8; text-shadow: 0 0 5px #0ff; }
-      to { opacity: 1; text-shadow: 0 0 20px #0ff; }
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(30px); filter: blur(6px); }
+      to { opacity: 1; transform: translateY(0); filter: blur(0); }
     }
 
     a {
       display: inline-block;
       color: #0ff;
       border: 2px solid #0ff;
-      padding: 10px 25px;
+      padding: 12px 28px;
       border-radius: 12px;
       text-decoration: none;
       font-size: 1.2rem;
       text-shadow: 0 0 10px #0ff;
       box-shadow: 0 0 15px #0ff inset, 0 0 20px #0ff;
-      animation: btnGlow 2.5s infinite alternate;
-      transition: 0.25s;
+      transition: 0.3s;
+      opacity: 0;
+      transform: translateY(50px) scale(0.9);
+      animation: fadeUpBtn 1.5s ease-out forwards 2.5s, btnGlow 2.5s infinite alternate 4s;
+    }
+
+    @keyframes fadeUpBtn {
+      from { opacity: 0; transform: translateY(50px) scale(0.9); filter: blur(8px); }
+      to { opacity: 1; transform: translateY(0) scale(1); filter: blur(0); }
     }
 
     @keyframes btnGlow {
       from { box-shadow: 0 0 10px #0ff; }
-      to { box-shadow: 0 0 30px #0ff, 0 0 60px #0ff inset; }
+      to { box-shadow: 0 0 25px #0ff, 0 0 60px #0ff inset; }
     }
 
     a:hover {
